@@ -1,7 +1,7 @@
 package org.openj9.test.java.lang;
 
 /*******************************************************************************
- * Copyright (c) 1998, 2017 IBM Corp. and others
+ * Copyright (c) 1998, 2018 IBM Corp. and others
  *
  * This program and the accompanying materials are made available under
  * the terms of the Eclipse Public License 2.0 which accompanies this
@@ -380,10 +380,22 @@ public class Test_System {
 		}
 	}
 
-/*
- * Exclude test_setSecurityManager2 because of PR 114680: [zOS S390 64bit Compressed Pointers] 90 VM_Sanity_SE8.SCTest-RecreateClassfileOnload IllegalStateException: Current state = RESET, new state = CODING_END
- * Remove the following IF when the PR is resolved.
- */
+	/**
+	 * @tests java.lang.System#setSecurityManager(java.lang.SecurityManager)
+	 */
+	@Test
+	public void test_setSecurityManager2() {
+		try {
+			String helperName = "org.openj9.test.java.lang.Test_System$TestSecurityManager";
+			String output = Support_Exec.execJava(new String[] {
+					"-Djava.security.manager=" + helperName, helperName },
+					null, true);
+			AssertJUnit.assertTrue("not correct SecurityManager: " + output, output
+					.startsWith(helperName));
+		} catch (Exception e) {
+			Assert.fail("Unexpected: " + e);
+		}
+	}
 
 	/**
 	 * @tests java.lang.System#setSecurityManager(java.lang.SecurityManager)
